src/objects/Zip_Code__c.object
<CustomObject>
    <description>This object is used to store the value of the zip code.</description>
    <fields>
        <fullName>Chapter__c</fullName>
        <description>This field is used to store the account value.</description>
        <formula>Office__r.Chapter__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External Id used for Mulesoft upsert.</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the value of office.</description>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Zip Code</relationshipLabel>
        <relationshipName>Zip_Code</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Zip Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chapter__c</columns>
        <columns>Office__c</columns>
        <columns>External_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Zip Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zip Code</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>